<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="error">The text is not loaded.</string>
    <string name="app_name">NewSum</string>
    <string name="text">Search</string>
    <string name="topics">Select topic</string>
    <string name="view_massage">[Summary Screen]\nSwipe left or right to change the topic.\n\nClick menu button to send or save the text\n\nTo Evaluate a Summary, select a number of stars and press the \"submit rating\" button that will appear</string>
    <string name="start_massage">[Main Screen]\nBy Clicking the \"Menu\" button, you may:\n\n\t- Choose the news Sources you prefer\n\t- Choose the news Categories you prefer\n\t- Clean the News History\n\t- Choose the theme you prefer\n\t- Enable or Disable submission of anonymous usage data statistics.</string>
    <string name="save_massage">Saved successfully. File path:</string>
    <string name="forgetVisited">Clear history</string>
    <string name="url">+/-Sources of News</string>
    <string name="categories">+/-News Categories</string>
    <string name="Copy">Save to SD card</string>
    <string name="Send">Send</string>
    <string name="mail">E-mail</string>
    <string name="sms">SMS</string>
    <string name="EN">English</string>
    <string name="GR">Ελληνικά</string>
    <string name="language">Language</string>
    <string name="L_EN">English</string>
    <string name="L_GR">Ελληνικά</string>
    <string name="help">Help</string>
    <string name="urlSource">http://newsumserver1.scify.gr:60001/NewSumFreeService/NewSumFreeService?wsdl</string>
    <string name="urlSOAPSource">http://newsumserver1.scify.gr:60001/NewSumFreeService/NewSumFreeService</string>
    <string name="urlSource2">http://newsumserver2.scify.gr:60001/NewSumFreeService/NewSumFreeService?wsdl </string>
<!--     <string name="urlSource2">http://143.233.226.97:60001/NewSumFreeService/NewSumFreeService?wsdl </string> -->
<!--     <string name="urlSource">http://192.168.2.3:8080/NewSumFreeService/NewSumFreeService?WSDL</string> -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="all">Select/Deselect All</string>
    <string name="connection_check">There seems to be a problem with your Internet connection</string>
    <string name="server_check">Could not communicate with the Server</string>
    <string name="select_or_cancel">You have not selected anything, please make a selection or press Cancel</string>
    <string name="select_one_source">You have not selected a source for the category:</string>
    <string name="select_many_sources">You have not selected a source for the categories:</string>
    <string name="search_result">No articles were found for this search</string>
    <string name="prev">&lt;</string>
    <string name="next">&gt;</string>
    <string name="check_sd">The SD card is not available</string>
	<string name="wait_msg">Working...</string>
	<string name="donate_uri">http://www.scify.gr/site/en/support-us/</string>
	<string name="please_rate">Please rate (many stars for a nice summary)</string>
	<string name="submit_rating">Submit rating</string>
	<string name="thankyou_rate">The rating was successful. Thank you!</string>    
	<string name="fail_rate">The rating failed. Please, try again later.</string>    
	<string name="urlRating" translatable="false">http://scify.no-ip.org:21113/NewSumRating/rate.php</string>
	<string name="shouldReloadSummaries">The news have been updated. You will be redirected to the main page to continue browsing.</string>	
    <string name="allSources">All sources</string>
<!--     <string name="custom_category"> </string> -->
<!--     <string name="custom_category">CICLing News</string> -->
    <string name="custom_category"></string>
<!--     <string name="custom_category_url">http://scify.iit.demokritos.gr/NewSumWeb/announce.html</string> -->
    <string name="custom_category_url"></string>
<!--     <string name="custom_category_mime">text/html</string> -->
    <string name="custom_category_mime"></string>
<!--     <string name="custom_category_elementId">table3</string> -->
    <string name="custom_category_elementId"></string>
    <string name="custom_category_unavailable">Page is currently unavailable.</string>
    <string name="custom_category_visit_source">Visit the original page.</string>
    <string name="share">Share</string>
    <string name="paypal_message">Even a small amount will help us offer solutions that have up to now been ...unbelievable!</string>
    <string name="new_lbl">New!</string>
    <string name="paypal_hint">Donation amount</string>
    <string name="paypal_exit">Exit</string>
    <string name="paypal_checkinput">please enter your donation</string>
    <string name="paypal_showFailure_title">FAILURE</string>
    <string name="paypal_showFailure_info">Could not initialize the PayPal library.</string>
    <string name="paypal_result_success_title">SUCCESS</string>
    <string name="paypal_result_failure_title">FAILURE</string>
    <string name="paypal_result_canceled_title">CANCELED</string>
    <string name="paypal_result_success_info">You have successfully completed your transaction.</string>
    <string name="paypal_result_canceled_info">The transaction has been cancelled.</string>
    <string name="system_announcement_url">http://www.scify.org/newsumannounceEN.html</string>
    <string name="last_newsum_announcement_title">NewSum Announcement</string>
    <string name="provider_connected"> connected</string>
    <string name="post">Message posted on </string>
    <string name="donate">Help us</string>
    <string name="settings">Settings</string>
    <string name="themes">Themes</string>
    <string name="statistics">Statistics</string>
    <string name="enable_statistics">You have enabled submission of anonymous usage statistics</string>
    <string name="disable_statistics">You have disabled submission of anonymous usage statistics</string>
    <string name="scify">http://www.scify.gr/site/en/</string>
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="hello_user">Hello %1$s!</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Successfully posted \'%1$s\'.\nPost ID: %2$s</string>
    <string name="fberror">Error</string>
    <string name="status_update">Updating status for %1$s at %2$s</string>
    <string name="you_picked">You picked:</string>
    <string name="app_id" translatable="false">524635570907212</string>
    <string name="exception">Exception: %1$s</string>
    <string name="progress_message">Signing in to Google&#8230;</string>
    <string name="greeting_status">Welcome, %s.</string>
    <string name="signed_out_status">Signed out.</string>
    <string name="sign_out_button_name">Sign out</string>
    <string name="default_status"/>
    <string name="signed_in_status">Signed in.</string>
    <string name="Post">Post</string>
    <string name="FPost">Post</string>
    <string name="PoweredBy">Sent by SciFY NewSum (c.f. www.scify.org)</string>

    <!--  THEME NAMES -->
    <string name="theme_black_name">Dusk</string>
    <string name="theme_blue_name">Aegean Sea</string>
    <string name="theme_orange_name">Citrus sinensis</string>
</resources>